Bring kiwi logo to landing page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <![endif]-->
 
   <p>
+    <img src='img/kiwi-logo.svg'> 
     Kiwi - a stab at effective widgets. Of the manager, for the developer, by the designer.
 
   </p>
