--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
 <body>
   <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+  <![endif]-->
 
-  <p>
-    <img src='img/kiwi-logo.svg'> 
-    Kiwi - a stab at effective widgets. Of the manager, for the developer, by the designer.
+  <article class="slide--landing">
 
-  </p>
+    <div>
+      <img src='img/kiwi-logo.svg'> 
+
+      Kiwi attempts to make frontend less painful for the backend. Literally.
+
+    </div>
+
+  </article>
 
   <script src="js/main.js"></script>
 </body>
