Introduce kiwi to project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/kiwi.css">
 
   <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -20,15 +21,33 @@
   <![endif]-->
 
   <article class="slide--landing">
-
     <div>
-      <img src='img/kiwi-logo.svg'> 
-
-      Kiwi attempts to make frontend less painful for the backend. Literally.
-
+      <img src="img/kiwi-logo.svg">
     </div>
 
+    <div>
+      <br>
+      <br>
+      Kiwi attempts to make frontend less painful for the backend. Literally.
+    </div>
   </article>
+
+  <article class="slide--introduction">
+  </article>
+
+  <article class="slide--infinite-components">
+  </article>
+
+  <article class="slide--left-pane-example">
+  </article>
+
+  <article class="slide--right-pane-example">
+  </article>
+
+  <article class="slide--3-col-example">
+  </article>
+
+
 
   <script src="js/main.js"></script>
 </body>
