Add infinite components example

--- a/index.html
+++ b/index.html
@@ -26,17 +26,98 @@
     </div>
 
     <div>
-      <br>
-      <br>
       Kiwi attempts to make frontend less painful for the backend. Literally.
     </div>
   </article>
 
   <article class="slide--introduction">
+    <div> 
+      Kiwi decouples markup from style, keeping the boundaries reasonably flexible.
+      etc etc
+    </div>
   </article>
 
+  <h4> Infinite components example </h4>
   <article class="slide--infinite-components">
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
   </article>
+
+  <h4> Infinite components example </h4>
+  <article class="slide--infinite-components">
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
+    <div class="widget">
+      <h3> Net worth </h3>
+      <img src="img/kiwi-logo.svg"> 
+      <p> Wow, you're getting richer! Would you like to buy an island online?
+    </div>
+
+
+  </article>
+
 
   <article class="slide--left-pane-example">
   </article>
