Add 3 column example

--- a/index.html
+++ b/index.html
@@ -120,12 +120,33 @@
 
 
   <article class="slide--left-pane-example">
+    <div class="menu">
+      Menu
+    </div>
+    <div class="main">
+      Main
+    </div>
   </article>
 
   <article class="slide--right-pane-example">
+    <div class="main">
+      Main
+    </div>
+    <div class="menu">
+      Menu
+    </div>
   </article>
 
   <article class="slide--3-col-example">
+    <div class="menu">
+      Menu
+    </div>
+    <div class="main">
+      Main
+    </div>
+    <div class="sidebar">
+      Sidebar
+    </div>
   </article>
 
 
